# dobby

./: CMakeLists.txt  CMakeLists.txt.user.3fc1ed8  README.md  Renderer.h  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
src/core/: framebuffer.h  model.h  rasterizer.cpp  rasterizer.h  renderer.h  scene.h  texture.h  window.h
src/math/: box3.h  helpers.h  mat4.h  math.h  vector2.h  vector3.h  vector4.h
